Fix jumping layout

--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -2,7 +2,7 @@ button.fas.fa-user-circle{
   display: block;
   background-color: transparent;
   color:gray;
-  margin: 8px;
+  margin: 0px;
   position: relative;
   transition: 1s;
   &:hover{
