--- a/app/assets/stylesheets/components/_main_nav.scss
+++ b/app/assets/stylesheets/components/_main_nav.scss
@@ -49,6 +49,9 @@
     text-shadow: 1px rgb(75, 139, 230);
   }
 }
+.logged-in-user{
+  max-width: 96px;
+}
 
 .fa-user-circle{
   position: relative;
